<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg"
    android:orientation="vertical"
    tools:context="com.yanjing.babyweight.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/current_week"
        android:textSize="25dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_week"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@drawable/text_week_background"
            android:gravity="center"
            android:text="@string/input_week"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/input_click" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_BDP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:background="@drawable/edit_background"
            android:hint="@string/input_BDP"
            android:inputType="numberDecimal"
            android:lines="1"
            android:padding="8dp"
            android:textSize="18dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_cm"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_this_BDP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/this_week_value"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_AC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:background="@drawable/edit_background"
            android:hint="@string/input_AC"
            android:inputType="numberDecimal"
            android:lines="1"
            android:padding="8dp"
            android:textSize="18dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_cm"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_this_AC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/this_week_value"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_FL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:background="@drawable/edit_background"
            android:hint="@string/input_FL"
            android:inputType="numberDecimal"
            android:lines="1"
            android:padding="8dp"
            android:textSize="18dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_cm"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_this_FL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/this_week_value"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/hint" />

    <Button
        android:id="@+id/btn_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />


</LinearLayout>
